--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "caniuse-lite": "^1.0.30001281",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "react": "^18.3.1",
